3rdparty changes:

Update Jan 3 2023
---------------------------------
* Updated oiio with PR3735, arm64 fix
* Updated .gitignore
* Added additional notes to packages.txt

Update Jan 1 2023
---------------------------------
* Updated autoconf to 2.7.1
* Updated automake to 1.16.5
* Added Python2.7 to install instructions
* Added nasm for x86_64 AVX-512 support in x264
* Moved autotools to libs
* Fixed Imath lettercase typo
* Fixed USD lettercase typo
* Added cmake build dir to Imath and OpenEXR
* Updated oiio to master branch
* Updated licenses

Update Jun 5 2022
---------------------------------
* Updated harfbuzz to 4.3.0
* Fixed pybind tar.gz
* Fixed Makefile debug and release variant
* Updated install instructions
* Fixed jasper check
* Fixed openjpeg check
* Fixed materialx package, removed cmake_build
* Fixed opensubdiv package, removed cmake_build
* Added harfbuzz and pcre2 to base for Qt dependencies
* Added Amazon Buckets to platforms.txt

Update Mars 26 2022
---------------------------------
* Updated for arm64
* Updated boost
* Updated openexr to 3.1.4
* Updated x264 from 138 to 164
* Updated yasm to 1.3.0
* Updated webp to 1.2.2
* Added alembic 1.8.3
* Added draco 1.5.2
* Added json 3.10.5
* Added libjpeg-turbo 2.1.3
* Added llvm 13.0.1
* Added materialx 1.38.1
* Added nanogui
* Added harfbuzz 4.0.1
* Added imath 3.1.4
* Added pcre2 10.39
* Added oneTBB 2021.5.0
* Added ptex from master
* Added tclap 1.2.5
* Removed aces_container
* Changed copyright to 2022
* Changed zlib to use Makefiles for pkg-config
* Added install_sitepackage.sh
* Clean up changes

Update Nov 8 2020
---------------------------------
* Rewrite and cleanup after 6 years

Update December 30 2014
---------------------------------
* Added aces container to license
* Added VFX Platform CY2015 compliant to readme

Update December 30 2014
---------------------------------
* Fixed incorrect QtTest repo url

Update December 29 2014
---------------------------------